--- a/index.css
+++ b/index.css
@@ -89,7 +89,7 @@ section{
     position: relative;
     height: 100vh;
     width: 100%;
-    /* <---img---> */
+    /* background: url('images/255.jpg'); */
     background-size:cover;
     background-repeat: no-repeat;
     background-position: center;
