--- a/index.css
+++ b/index.css
@@ -339,7 +339,7 @@ header.sticky{
 .layer{
     width: 100%;
     height: 0;
-    background: linear-gradient(rgba(0,0,0,0.1), #ff004f);
+    background: linear-gradient(grey,red,transparent);
     position: absolute;
     border-radius: 8px;
     left: 0;
